objects/OSM_Order_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCProduct__c</fullName>
        <formula>OSM_CCSubscription__r.ccrz__SubscriptionProduct__r.ccrz__SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCProduct Sku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCQuantity__c</fullName>
        <label>CCQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>OSM Order Subscriptions</relationshipLabel>
        <relationshipName>OSM_Order_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OSM Order Subscriptions</relationshipLabel>
        <relationshipName>OSM_Order_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_CCOrder__c</fullName>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>OSM Order Subscriptions</relationshipLabel>
        <relationshipName>OSM_Order_Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OSM_CCSubscription__c</fullName>
        <label>CC Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>OSM Order Subscriptions</relationshipLabel>
        <relationshipName>OSM_Order_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Per_Unit__c</fullName>
        <formula>IF(Vertex_Tax__c==0 || CCQuantity__c==0 , 0, Vertex_Tax__c/CCQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertex_Tax__c</fullName>
        <formula>CC_Order_Item__r.Vertex_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OSM Order Subscription</label>
    <nameField>
        <displayFormat>OSM-{00000}</displayFormat>
        <label>OSM Order Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM Order Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>